Vcs: Do not freeze when the user starts its commit message with <Tab>

Task-number: QTCREATORBUG-11614

Change-Id: Ide2fe81250f3c1331a7f54be827e7dd8f551fdc6
Reviewed-by: Tobias Hunger <tobias.hunger@digia.com>